Show: TGR-687: Rbel-Namespace extended